added 3d. Code should now be fully complete.

--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -663,7 +663,7 @@
    "execution_count": 126,
    "id": "52313eb3",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -693,8 +693,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "id": "e4ae6176",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' \n",
+    "question 3d\n",
+    "'''\n",
+    "\n",
+    "def findIndexOfFeature(feature):\n",
+    "    featureNames = vectorizer.get_feature_names()\n",
+    "    return featureNames.index(feature)\n",
+    "\n",
+    "def compute_information_gain(clf, featureToken):\n",
+    "    \"\"\"\n",
+    "    compute_information_gain(Classifier clf, int feature_id)\n",
+    "    ======\n",
+    "    Returns the information gain of a split in the feature_id given,\n",
+    "    the higher the information gain, the better the split.\n",
+    "    \"\"\"\n",
+    "    # Search for feature_id\n",
+    "    feature_id = findIndexOfFeature(featureToken)\n",
+    "    \n",
+    "    tree_features = clf.tree_.feature\n",
+    "    num_features = clf.tree_.n_features\n",
+    "    node_samples = clf.tree_.weighted_n_node_samples\n",
+    "    feature_importance = np.zeros((num_features,)) # Feature importance as an array\n",
+    "    left_branch = clf.tree_.children_left # Index of features for left branch\n",
+    "    right_branch = clf.tree_.children_right # Index of features for right branch\n",
+    "\n",
+    "    # Impurity is interpreted as Entropy\n",
+    "    entropy = clf.tree_.impurity    \n",
+    "\n",
+    "    for nodeIndex,node in enumerate(clf.tree_.feature):\n",
+    "        if node >= 0:\n",
+    "            # Accumulate the feature importance over the nodes where it's used\n",
+    "            entropy_before_split = entropy[nodeIndex]*node_samples[nodeIndex]\n",
+    "            entropy_left_branch = entropy[left_branch[nodeIndex]]*node_samples[left_branch[nodeIndex]]\n",
+    "            entropy_right_branch = entropy[right_branch[nodeIndex]]*node_samples[right_branch[nodeIndex]]\n",
+    "            \n",
+    "            feature_importance[node] += entropy_before_split - entropy_left_branch - entropy_right_branch\n",
+    "\n",
+    "    # Total number of samples at the root node\n",
+    "    feature_importance = feature_importance / node_samples[0]\n",
+    "\n",
+    "    information_gain = -1\n",
+    "    \n",
+    "    # Adding feature_id column\n",
+    "    features = tree_features[tree_features>=0] # Negative feature is a leaf node\n",
+    "    features_list_by_id = list(zip(features,feature_importance[features]))\n",
+    "    for feat in features_list_by_id:\n",
+    "        if feat[0] == feature_id:\n",
+    "            information_gain = feat[1]\n",
+    "    \n",
+    "    print('The information gain (IG) of splitting the tree by ** {0} ** is {1}.'.format(featureToken, information_gain))\n",
+    "\n",
+    "    return information_gain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "3f3d7890",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The information gain (IG) of splitting the tree by ** donald ** is 0.05119976458378991.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/costa/.local/share/virtualenvs/CSC2515-NQsYOTGh/lib/python3.9/site-packages/sklearn/utils/deprecation.py:87: FutureWarning: Function get_feature_names is deprecated; get_feature_names is deprecated in 1.0 and will be removed in 1.2. Please use get_feature_names_out instead.\n",
+      "  warnings.warn(msg, category=FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.05119976458378991"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "featureIG = compute_information_gain(clf, \"donald\")\n",
+    "featureIG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "e779f852",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The information gain (IG) of splitting the tree by ** trump ** is 0.005945390489572579.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/costa/.local/share/virtualenvs/CSC2515-NQsYOTGh/lib/python3.9/site-packages/sklearn/utils/deprecation.py:87: FutureWarning: Function get_feature_names is deprecated; get_feature_names is deprecated in 1.0 and will be removed in 1.2. Please use get_feature_names_out instead.\n",
+      "  warnings.warn(msg, category=FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.005945390489572579"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "featureIG = compute_information_gain(clf, \"trump\")\n",
+    "featureIG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ce7802f",
    "metadata": {},
    "outputs": [],
    "source": []
